# WEB-HW2

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
assistant/: addressbook.py  addressbook_classes.py  decorators.py  main.py  menu.py  notes.py  notes_classes.py  pretty_view.py  sort_directory.py  verification.py
