[tool.poetry]
name = "web-hw2"
version = "0.1.0"
description = "Assistant Poetry"
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_hw2"}]

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
